# nrquery

./: .pre-commit-config.yaml  Makefile  README.md  nrquery.py  requirements.in  requirements.txt  setup.bak  setup.cfg  setup.py
docs/: development.md
examples/: run_metric_reshape.py  run_metric_sample.py  run_metric_sample2.py  run_metric_shape.py  run_metric_stat.py  run_query1.py  run_query_conveyer.py  run_query_csv.py  run_query_dataframe.py  run_query_metric.py  run_query_metric_dump.py  run_query_metric_resample.py  run_query_numpy.py  run_query_series.py  run_query_with_timestamps.py
examples/csv/: belldown.csv  bellup.csv  down.csv  flat.csv  up.csv
tests/: nrquery_test.py  sample_test.py
