[metadata]
name = nrquery
version = 0.0.0
description = New Relic query interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/[your repo]/[repo name]
author = [YOUR NAME]
author_email = [YOUR EMAIL]
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = nrquery
python_requires = >=3.8

[coverage:run]
branch = True
source = tests
source_pkgs = .

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
ignore_errors = True

[coverage:html]
directory = coverage_html_report

[coverage:xml]
output = coverage.xml

[flake8]
ignore = W503,E203
max-line-length = 1024
